[package]
name = "mls-rs-crypto-nss"
version = "0.1.0"
edition = "2021"
description = "NSS based CryptoProvider for mls-rs"
homepage = "https://github.com/awslabs/mls-rs"
repository = "https://github.com/awslabs/mls-rs"
keywords = ["mls", "mls-rs"]
license = "Apache-2.0 OR MIT"

[features]
default = ["std"]
gecko = ["nss-gk-api/gecko"]

std = [
    "mls-rs-core/std",
    "mls-rs-crypto-hpke/std",
    "mls-rs-crypto-traits/std",
    "getrandom/std",
    "rand_core/std",
    "p256/std",
    "dep:thiserror"
]

[dependencies]
mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.18.0" }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", default-features = false, version = "0.9.0" }
mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "0.10.0" }
nss-gk-api = { path = "/home/anna/cryptoWrappers/nss-gk-api", default-features = false}
# nss-gk-api = { path = "", rev = "d4bc7687f2d4a923c83beeaeefbeacd6f0d12040", default-features = false}

thiserror = { version = "1.0.40", optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }

# Random
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }

# KEM
p256 = { version = "0.13", default-features = false, features = ["alloc", "ecdh", "ecdsa", "pem"] }
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }

maybe-async = "0.2.10"

[dev-dependencies]
hex = { version = "^0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
assert_matches = "1.5.0"
mls-rs-core = { path = "../mls-rs-core", version = "0.18.0", features = ["test_suite"] }
mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", default-features = false, version = "0.9.0", features = ["test_utils"] }

[target.'cfg(mls_build_async)'.dependencies]
async-trait = "^0.1"
